used Base64 from java.util